--- a/gcsfuse/prep-data.ipynb
+++ b/gcsfuse/prep-data.ipynb
@@ -18,7 +18,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#%%capture\n",
+    "%%capture\n",
     "!unrar e UCF101.rar data/\n",
     "!unzip -qq UCF101TrainTestSplits-RecognitionTask.zip"
    ]
@@ -98,7 +98,7 @@
     "        os.mkdir(output_dir)\n",
     "    for i in tqdm(range(df.shape[0])):\n",
     "        videoFile = df['video_name'][i].split(\"/\")[-1]\n",
-    "        videoPath = os.path.join(\"~\", videoFile)\n",
+    "        videoPath = os.path.join(\"data\", videoFile)\n",
     "        shutil.copy2(videoPath, output_dir)\n",
     "    print()\n",
     "    print(f\"Total videos: {len(os.listdir(output_dir))}\")"
