--- a/gcsfuse/prep-data.ipynb
+++ b/gcsfuse/prep-data.ipynb
@@ -3,26 +3,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9e527b4a-993a-460e-80a9-716f596716ce",
+   "id": "c4ddfb7f-5223-4934-b661-b4b5ee32ea15",
    "metadata": {},
    "outputs": [],
    "source": [
-    "!wget -q --no-check-certificate https://www.crcv.ucf.edu/data/UCF101/UCF101.rar\n",
-    "!wget -q --no-check-certificate https://www.crcv.ucf.edu/data/UCF101/UCF101TrainTestSplits-RecognitionTask.zip"
+    "!mkdir data\n",
+    "!gsutil cp gs://ucf101-dataset/data/* data/\n",
+    "!mkdir ucfTrainTestlist\n",
+    "!gsutil cp gs://ucf101-dataset/ucfTrainTestlist ucfTrainTestlist/"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8a0061c3-1c25-447c-9d16-90d0fddbb883",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%capture\n",
-    "!unrar e UCF101.rar data/\n",
-    "!unzip -qq UCF101TrainTestSplits-RecognitionTask.zip"
-   ]
-  },
+  },  
   {
    "cell_type": "code",
    "execution_count": null,
